	 and/or contended to the memory map pane.
20040409 machines/tc2068.c: #include <string.h> for memset.
20040410 ui/gtk/browse.c: #include <string.h> for strcpy.
20040111 Revamp of menu system to share code between the GTK+ and widget
	 implementations (patch #931017).
20040411 compat.h,debugger/expression.c,fuse.[ch],input.c,joystick.c,
	 nullsound.c,tape.c,utils.c,widget/menu.c: declare fuse_abort()
	 to never return and remove the 'keep gcc happy' bits this
	 assumption makes unnecessary.
20040411 menu.c,menu_data.c,settings-header.pl,settings.pl: allow the
	 +3e ROMs to be selected from the user interfaces.
20040413 menu_data.pl: Perl 5.6 fixup.
20040415 tape.c: when loading a block via the tape traps, we must have at
	 least DE + 2 bytes due to the flag and parity bytes.
20040415 tape.c: after successfully loading a block with tape traps, set
	 DE equal to zero as this is what happens in the ROM code.
	 Necessary for 'The Rats' to load with tape traps enabled; thanks
	 to Simon Stuart for reporting this (fixes bug #890838).
20040415 menu_data.pl,widget/{menu.c,widget.h}: fix up widget compilation
	 of the new menu code.
20040415 menu.[ch],rzx.[ch],ui/gtk/{binary.c,fileselector.c,gtkinternals.h,
	 gtkui.c,roms.c},widget/menu.c: generalise more functions into
	 menu.c (GTK+ changes).
20040415 widget/{menu.c,widget.h}: generalise more functions into menu.c
	 (widget changes).
20040415 menu.[ch]: add copyright and GPL notice.
20040416 menu.[ch],ui/gtk/gtkui.c,widget/menu.c: generalise
	 menu_media_disk_insert().
20040416 keyboard.[ch],ui/gtk/gtkjoystick.c: add kludgey UI to allow
	 the joystick fire button actions to be changed.
20040419 Major memory mapping revamp (patch #932893).
20040419 printer.c: stop output to the serial printer when printer
	 emulation is disabled.
20040420 utils.c: cartridges would be lost on reset if opened with
	 File/Open (or from the command line) rather than with
	 Media/Cartridge/Insert.