@@ -189,7 +189,6 @@ tc2068_init( fuse_machine_info *machine )
   fake_mapping.page = fake_bank;
   fake_mapping.writable = 0;
   fake_mapping.contended = 0;
-  fake_mapping.allocated = 0;
   fake_mapping.bank = MEMORY_BANK_DOCK;
   fake_mapping.offset = 0x0000;
 
@@ -203,10 +202,6 @@ tc2068_init( fuse_machine_info *machine )
 static int
 dock_exrom_reset( void )
 {
-  scld_bank_free( memory_map_home );
-  scld_bank_free( memory_map_dock );
-  scld_bank_free( memory_map_exrom );
-
   memory_map_home[0] = &memory_map_rom[ 0];
   memory_map_home[1] = &memory_map_rom[ 1];
 
@@ -245,7 +240,6 @@ tc2068_reset( void )
     memory_map_dock[i] = &timex_dock[i];
 
     timex_exrom[i] = memory_map_rom[2];
-    timex_exrom[i].allocated = 0;
     timex_exrom[i].page_num = i;
     memory_map_exrom[i] = &timex_exrom[i];
 
